@@ -23,10 +23,13 @@
   <comments>
     <en>
 
+      &lt;B&gt;This driver is available in the &lt;A href=&quot;https://github.com/OpenPrinting/ghostscript-printer-app&quot;&gt;Ghostscript Printer Application&lt;/A&gt;&lt;/B&gt;&lt;P&gt;
+      &lt;iframe src=&quot;https://snapcraft.io/ghostscript-printer-app/embedded?button=black&amp;summary=true&quot; frameborder=&quot;0&quot; width=&quot;100%&quot; height=&quot;300px&quot; style=&quot;border: 1px solid #CCC; border-radius: 2px;&quot;&gt;&lt;/iframe&gt;
+
       Free software printer driver for Brother DCP laser printers
       which require the print data in a proprietary format. It is
       known to work with the DCP-7030 and DCP-7065DN. If you have a
-      Brother printer which does nmot work with any opf the other free
+      Brother printer which does not work with any of the other free
       software printer drivers, try this driver and report your
       results.
 
