@@ -1,7 +1,7 @@
 <driver id="driver/ptouch">
   <name>ptouch</name>
   <pcdriver>PT</pcdriver>
-  <url>https://bitbucket.org/philpem/printer-driver-ptouch/</url>
+  <url>https://github.com/philpem/printer-driver-ptouch</url>
   <thirdpartysupplied />
   <execution>
     <filter />
@@ -9,17 +9,15 @@
   <comments>
     <en>
 
+    &lt;B&gt;This driver is available in the &lt;A href=&quot;https://github.com/OpenPrinting/ghostscript-printer-app&quot;&gt;Ghostscript Printer Application&lt;/A&gt;&lt;/B&gt;&lt;P&gt;
+    &lt;iframe src=&quot;https://snapcraft.io/ghostscript-printer-app/embedded?button=black&amp;summary=true&quot; frameborder=&quot;0&quot; width=&quot;100%&quot; height=&quot;300px&quot; style=&quot;border: 1px solid #CCC; border-radius: 2px;&quot;&gt;&lt;/iframe&gt;
+
     CUPS raster driver for Brother's P-Touch label printers.&lt;p&gt;
 
     Foomatic data to generate the PPD files is included with the
     driver, therefore we do not provide this data and PPDs here on the
     OpenPrinting site.&lt;p&gt;
 
-    The driver is not maintained any more by its original author, but the
-    &lt;a href=&quot;http://www.diku.dk/~panic/P-touch/&quot;&gt;old
-    homepage&lt;/a&gt; is still accessible. The development continues
-    &lt;a href=&quot;https://bitbucket.org/philpem/printer-driver-ptouch/&quot;&gt;here&lt;/a&gt; now.&lt;p&gt;
- 
   </en>
   </comments>
   <printers>
