@@ -1,5 +1,6 @@
 2021-10-21  Till Kamppeter <till.kamppeter@gmail.com>
 
+	db/source/driver/brlaser.xml,
 	db/source/driver/c2esp.xml,
 	db/source/driver/foo2hbpl2.xml,
 	db/source/driver/foo2hiperc-z1.xml,
@@ -16,6 +17,7 @@
 	db/source/driver/foo2zjs-z3.xml,
 	db/source/driver/foo2zjs.xml,
 	db/source/driver/m2300w.xml,
+	db/source/driver/ptouch.xml,
 	db/source/driver/pxljr.xml,
 	db/source/driver/rastertosag-gdi.xml,
 	db/source/driver/splix.xml: Added Snap Store link to
